<resources>
    <string name="app_name">ViewModelExample</string>
    <string name="superheroes">Superheroes</string>
    <string name="change_color">Change color</string>
    <string name="people">People</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="new_person">New person</string>
    <string name="years_old">years old.</string>
</resources>