<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_superheroes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/superheroes"/>

        <Button
            android:id="@+id/btn_change_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_color"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>